[package]
name = "donut"
version = "0.1.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4"

[dev-dependencies]
criterion = "0.3"
ringbuf = "0.2"

[[bench]]
name = "buffer"
harness = false
